# TokenLeak

./: .env.example  .gitignore  README.md  README_RU.md  agent.md  pyproject.toml  requirements.txt  tokenleak.py
LEAKED_TOKENS_FOR_TEST/: README.md  config.py
LEAKED_TOKENS_FOR_TEST/app/: payment.py  settings.py
LEAKED_TOKENS_FOR_TEST/ci/: deploy.yml
LEAKED_TOKENS_FOR_TEST/db/: connection_strings.txt
LEAKED_TOKENS_FOR_TEST/keys/: id_rsa  jwt_tokens.txt
LEAKED_TOKENS_FOR_TEST/terraform/: main.tf
docs/: architecture.md  cron_setup.md  deployment.md  flow.md  mattermost_setup.md  model_comparison.md  postgresql_setup.md  prefilter.md  workflow.md
tests/: conftest.py  test_agent.py  test_clone.py  test_db_multimodel.py  test_mattermost.py  test_prefilter.py  test_report.py  test_walker.py
tokenleak/: __init__.py  __main__.py  animation.py  cli.py  config.py  lock.py  logging_setup.py
tokenleak/agent/: client.py  runner.py
tokenleak/db/: __init__.py  base.py  postgres.py  sqlite.py
tokenleak/mcp_server/: server.py
tokenleak/notifications/: mattermost.py
tokenleak/providers/: __init__.py  generic.py  gitea.py  github.py  gitlab.py
tokenleak/report/: csv_export.py  markdown.py
tokenleak/scanner/: clone.py  extractor.py  ocr.py  prefilter.py  walker.py
