[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tokenleak"
version = "0.1.0"
description = "AI-powered git repository security scanner for secrets, tokens, and sensitive data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
tokenleak = "tokenleak.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tokenleak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
